--- a/src/newtab.css
+++ b/src/newtab.css
@@ -14,14 +14,13 @@ body {
     margin-bottom: 15px;
     border: 1px dotted #847461;
     padding: 8px;
-    width: 200px;
 }
 #bookmarks div:hover {
     border: 1px solid #2c4d67;
 }
 .group_title {
     color: #333333;
-    font-family: Verdana, Calibri, sans-serif;
+    font-family: sans-serif;
     font-size: 1em;
     font-weight: bold;
     margin-left: 5px;
@@ -38,7 +37,6 @@ body {
 #bookmarks ul li {
     list-style: none;
     margin-bottom: 3px;
-    width: 200px;
 }
 #bookmarks ul li a {
     color: #000000;
