--- a/src/newtab.css
+++ b/src/newtab.css
@@ -6,18 +6,20 @@ body {
 #bookmarks {
     margin-top: 20px;
 }
+
 #bookmarks div {
     background-color: #ffffff;
     border-radius: 10px;
     float: left;
-    margin-left: 15px;
     margin-bottom: 15px;
     border: 1px dotted #847461;
     padding: 8px;
 }
+
 #bookmarks div:hover {
     border: 1px solid #2c4d67;
 }
+
 .group_title {
     color: #333333;
     font-family: sans-serif;
@@ -25,42 +27,55 @@ body {
     font-weight: bold;
     margin-left: 5px;
 }
+
 .group_title:hover {
     color: #1f68a0;
 }
+
+.group_back {
+    font-weight: bold;
+}
+
+.group_back:hover {
+    cursor: pointer;
+    color: #cc0000 !important;
+}
+
 #bookmarks ul {
     margin-left: -25px;
     margin-top: 5px;
     margin-bottom: 0px;
 }
+
 #bookmarks ul li {
     list-style: none;
     margin-bottom: 3px;
 }
+
 #bookmarks ul li a {
     color: #000000;
     font-family: Verdana, sans-serif;
     font-size: 0.9em;
     text-decoration: none;
-    padding: 5px;
-    height: 12px;
     position: relative;
+    display: block;
+    width: 210px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-left: 5px;
     left: -7px;
 }
+
 #bookmarks ul li a:hover {
     color: #1f68a0;
     cursor: pointer;
 }
+
 #bookmarks ul li a:focus {
     outline: 1px solid #1f68a0;
 }
-.group_back {
-    font-weight: bold;
-}
-.group_back:hover {
-    cursor: pointer;
-    color: #cc0000 !important;
-}
+
 .favicon {
     position: relative;
     top: 3px;
